# reader

./: .gitignore  .pre-commit-config.yaml  JOURNAL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: cli.md  demo.md  index.md  logic_symmetry.md  marimo_reference.md  notebooks.md  pipeline.md  plugins.md  sfxi_vec8.md  sfxi_vec8_in_reader.md  spec.md
docs/audits/: sfxi_reader_opal_audit.md
docs/core/: pipeline.md  plugins.md  spec.md
docs/guides/: demo.md  marimo_reference.md  notebooks.md
docs/lib/: crosstalk_pairs.md  sfxi_vec8_in_reader.md
experiments/1_20250512_retron_panel_M9_glu_araBAD_pspA_marRAB_umuDC_alaS_phoA/: README.md  config.yaml  plate_map.xlsx
experiments/2_20250512_sensor_panel_M9_glu/: config.yaml  plate_map.xlsx
experiments/template/: JOURNAL.md  config.yaml  metadata.csv  metadata.xlsx
experiments/template/inputs/: metadata.xlsx
experiments/template/notebooks/: eda.py
src/reader/: __init__.py  __main__.py  config.py  main.py
src/reader/core/: artifacts.py  cli.py  config_model.py  context.py  contracts.py  engine.py  errors.py  mpl.py  notebooks.py  plot_sinks.py  plot_utils.py  presets.py  registry.py  specs.py
src/reader/domain/: __init__.py
src/reader/domain/sfxi/: __init__.py  docs.md  math.py  reference.py  selection.py
src/reader/io/: discovery.py  sample_map.py  synergy_h1.py
src/reader/lib/crosstalk/: __init__.py  pairs.py
src/reader/lib/logic_symmetry/: __init__.py  docs.md  encodings.py  extract_corners.py  io.py  main.py  metrics.py  overlay.py  prep.py  render.py
src/reader/lib/microplates/: __init__.py  base.py  distributions.py  snapshot_barplot.py  snapshot_heatmap.py  style.py  time_series.py  ts_and_snap.py  ts_snap_plus_design.py
src/reader/lib/sfxi/: __init__.py  api.py  docs.md  math.py  reference.py  run.py  selection.py  validation.py  writer.py
src/reader/parsers/: __init__.py  discovery.py  flow_cytometer.py  plate_map.py  raw.py  sample_map.py  sample_metadata.py  synergy_h1.py  synergy_h1_kinetic_only.py  synergy_h1_snapshot_and_time_series.py
src/reader/plotters/: barplot_snapshot.py  distributions.py  snapshot_heatmap.py  snapshot_multi_feature.py  snapshot_multi_genotype.py  time_series.py
src/reader/plotters/logic_symmetry/: README.md  __init__.py  encodings.py  extract_corners.py  io.py  main.py  metrics.py  overlay.py  render.py
src/reader/plotting/: __init__.py
src/reader/plotting/logic_symmetry/: __init__.py  docs.md  encodings.py  extract_corners.py  io.py  main.py  metrics.py  overlay.py  prep.py  render.py
src/reader/plotting/microplates/: __init__.py  base.py  distributions.py  snapshot_barplot.py  snapshot_heatmap.py  style.py  time_series.py  ts_and_snap.py  ts_snap_plus_design.py
src/reader/plugins/export/: __init__.py  csv.py  excel.py  tsv.py  xlsx.py
src/reader/plugins/ingest/: __init__.py  flow_cytometer.py  synergy_h1.py
src/reader/plugins/merge/: __init__.py  sample_map.py  sample_metadata.py
src/reader/plugins/plot/: __init__.py  distributions.py  logic_symmetry.py  snapshot_barplot.py  snapshot_heatmap.py  time_series.py  ts_and_snap.py  ts_snap_plus_design.py
src/reader/plugins/transform/: __init__.py  alias.py  blank.py  crosstalk_pairs.py  fold_change.py  outlier_filter.py  overflow.py  ratio.py  sfxi.py  with_columns.py
src/reader/plugins/validator/: __init__.py  to_tidy_plus_map.py
src/reader/processors/: __init__.py  custom_params.py  fold_change.py  logic_symmetry_prep.py  merger.py  sfxi_ingest_prep.py
src/reader/processors/sfxi/: README.md  __init__.py  api.py  math.py  reference.py  run.py  selection.py  validation.py  writer.py
src/reader/tests/: __init__.py  test_alias_plugin.py  test_artifacts_manifest.py  test_cli_artifacts.py  test_cli_notebook_modes.py  test_cli_plot_export.py  test_cli_ux.py  test_config_validation.py  test_crosstalk_pairs.py  test_cytometer_plugins.py  test_engine_contracts.py  test_engine_explain.py  test_experiment_configs.py  test_export_xlsx.py  test_integration_pipelines.py  test_mpl_cache.py  test_notebook_scaffold.py  test_notebook_templates.py  test_palette.py  test_plot_render_path.py  test_presets.py  test_ratio_plugin.py  test_reports.py  test_sfxi_math.py  test_sfxi_selection.py  test_transform_strict.py  test_with_columns.py
src/reader/utils/: fs.py  logging.py  plot_style.py  prune_config.py
