[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reader"
version = "1.0.0"
description = "Lab instrumentation data pipeline (plugin engine)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eric J. South", email = "ericjohnsouth@gmail.com" }]

# <-- MOVE dependencies HERE (was accidentally under tool.setuptools.packages.find)
dependencies = [
  "pandas>=2.1",
  "pydantic>=2.6",
  "pyyaml>=6.0.2",
  "typer>=0.12.0",
  "rich>=13.7",
  "pyarrow>=15.0",
  "openpyxl>=3.1",
  "seaborn>=0.13",
]

[project.scripts]
reader = "reader.core.cli:app"

# src/ layout mapping (robust with editable installs)
[tool.setuptools.package-dir]
"" = "src"

# discover all reader packages under src/
[tool.setuptools.packages.find]
where = ["src"]
include = ["reader*"]
namespaces = false

[tool.uv]
dev-dependencies = ["pytest", "ruff"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
extend-exclude = [".venv", "build", "dist", ".eggs", "*.egg-info"]

[tool.ruff.lint]
select = ["E","F","W","I","UP","B","SIM","C4","PLC","PLE"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101","PLR2004","B011","SIM*"]
"**/*.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
